mantendo as divs `filters` e `samples` pra estilizar melhor

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <div class="title" >Seja você seu próprio Vidane</div>
+    <div class="title">Seja você seu próprio Vidane</div>
+    <div id="filters"></div>
+    <div id="samples"></div>
     <script src="vidane-soundboard.js"></script>
   </body>
 </html>
