--- a/index.html
+++ b/index.html
@@ -4,47 +4,10 @@
 <head>
   <title>Soundboard do Vidane</title>
   <meta charset="utf-8" />
-  <script>
-    if (
-      localStorage.getItem("color-mode") === "dark" ||
-      (window.matchMedia("(prefers-color-scheme: dark)").matches &&
-        !localStorage.getItem("color-mode"))
-    ) {
-      document.documentElement.setAttribute("color-mode", "dark");
-    }
-  </script>
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="color-mode">
-  <svg style="display: none;">
-    <symbol viewBox="0 0 24 24" id="moon">
-      <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
-    </symbol>
-    <symbol viewBox="0 0 24 24" id="sun">
-      <circle cx="12" cy="12" r="5"></circle>
-      <line x1="12" y1="1" x2="12" y2="3"></line>
-      <line x1="12" y1="21" x2="12" y2="23"></line>
-      <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-      <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-      <line x1="1" y1="12" x2="3" y2="12"></line>
-      <line x1="21" y1="12" x2="23" y2="12"></line>
-      <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-      <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-    </symbol>
-  </svg>
-  <button class="color-mode__btn light--hidden" aria-label="Toggle light mode">
-    <svg aria-hidden="true">
-      <title>Light Mode</title>
-      <use href="#sun"></use>
-    </svg>
-    <button class="color-mode__btn dark--hidden" aria-label="Toggle dark mode">
-      <svg aria-hidden="true">
-        <title>Dark Mode</title>
-        <use href="#moon"></use>
-      </svg>
-    </button>
-  </button>
+<body>
   <div class="root">
     <div class="title"><span>
         Seja você seu próprio
@@ -57,7 +20,6 @@
     <div id="samples"></div>
   </div>
   <script src="vidane-soundboard.js"></script>
-  <script src="toggle.js"></script>
 </body>
 
 </html>
