style: update filter btn

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Soundboard do Vidane</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="style.css">
+  <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet'>
 </head>
 
 <body>
