style: minor updates

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
     <div class="title"><span>
         Seja você seu próprio
       </span>
-      <button>Vidane</button>
-
-      
+      <img src="./vidane.png">      
     </div>
+    
     <div id="filters"></div>
     <div id="samples"></div>
   </div>
